# chip_8_emulator

./: Cargo.toml  build.rs
src/: chip_8_emulator.rs  emulator_app.rs  error_report_window.rs  events.rs  main.rs  startup.rs  utils.rs
src/chip_8/: beep.rs  config.rs  display.rs  emulator.rs  emulator_window.rs  font.rs  keypad.rs  memory.rs  mod.rs  sound.rs
src/chip_8/instructions/: mod.rs  op_0.rs  op_0000.rs  op_5.rs  op_8.rs  op_8000.rs  op_d.rs  op_d000.rs  op_dxyn.rs  op_e.rs  op_e000.rs  op_f.rs  op_f000.rs  x_0000.rs  x_8000.rs  x_dxyn.rs  x_e000.rs  x_f000.rs
src/emulator/: emulator.rs  emulator_window.rs  instructions.rs  keypad.rs  mod.rs  opcodes.rs  window.rs
src/emulator/instructions/: mod.rs  x_0000.rs  x_8000.rs  x_dxyn.rs  x_e000.rs  x_f000.rs
src/errors/: error.rs  error_code.rs  error_manager.rs  error_report_window.rs  errors.rs  mod.rs
src/screens/: emulator_screen.rs  emulator_settings.rs  error_report_screen.rs  mod.rs  startup_screen.rs
src/ui/: main_screen.rs  mod.rs  settings.rs
