[package]
name = "chip_8_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
rfd = "0.15.0"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "A chip 8 emulator written in rust."
OriginalFilename = "chip_8_emulator.exe"
ProductName = "Chip 8 Emulator"
