[package]
name = "chip_8_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
rand = "0.8.5"
eframe = "0.30.0"
rfd = "0.15.2"
cpal = "0.15.3"
egui-keybind = "0.5.0"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "A Chip 8 Emulator written in rust."
OriginalFilename = "chip_8_emulator.exe"
ProductName = "Chip 8 Emulator"
